--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
     "next": "14.2.3",
+    "next-video": "^1.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
+    "react-lazyload": "^3.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.4",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
@@ -30,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lazyload": "^3.2.3",
     "@types/react-scroll": "^1.8.10",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
